Fix author overlap on cards

--- a/docroot/themes/custom/landcam_bootstrap_sass/scss/style.scss
+++ b/docroot/themes/custom/landcam_bootstrap_sass/scss/style.scss
@@ -125,6 +125,9 @@ a {
    padding: 0 .5rem;
    font-size: $font-size-xs;
   }
+  .field--name-field-author-s- {
+    max-width: 85%;
+  }
   .field--type-image,
   .field--type-video-embed-field {
     margin: 0;
